# python-playwright

./: README.md  pyproject.toml
.github/workflows/: rerun-last-fail.yml  test.yml
tests/: test_reporter.py
